feat: 添加 pgvector 支持和 Docker 启动脚本
- docker-compose.yml: 使用 pgvector/pgvector:pg16-alpine
- init.sql: 添加 vector 扩展和向量索引
- db/__init__.py: 启用 embedding 列，添加向量搜索函数
- db/cli.py: 添加 start/stop/restart/logs 命令

--- a/db/docker-compose.yml
+++ b/db/docker-compose.yml
@@ -1,8 +1,8 @@
-# Copaw PostgreSQL Docker Compose
+# Copaw PostgreSQL with pgvector Docker Compose
 
 services:
   postgres:
-    image: postgres:16-alpine
+    image: pgvector/pgvector:pg16-alpine
     container_name: copaw-db
     restart: unless-stopped
     environment:
@@ -23,9 +23,9 @@ services:
     deploy:
       resources:
         limits:
-          memory: 512M
+          memory: 1G
         reservations:
-          memory: 256M
+          memory: 512M
 
 volumes:
   copaw_data:
