--- a/db/docker-compose.yml
+++ b/db/docker-compose.yml
@@ -3,20 +3,20 @@
 services:
   postgres:
     image: pgvector/pgvector:pg16-alpine
-    container_name: copaw-db
+    container_name: cp9_pgvec
     restart: unless-stopped
     environment:
-      POSTGRES_DB: copaw
-      POSTGRES_USER: copaw
-      POSTGRES_PASSWORD: ${COPAW_DB_PASSWORD:-copaw_password}
+      POSTGRES_DB: cp9
+      POSTGRES_USER: cp9
+      POSTGRES_PASSWORD: Cp9IsBest
       PGDATA: /var/lib/postgresql/data/pgdata
     ports:
-      - "${COPAW_DB_PORT:-5432}:5432"
+      - "5432:5432"
     volumes:
-      - copaw_data:/var/lib/postgresql/data
+      - cp9_data:/var/lib/postgresql/data
       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U copaw -d copaw"]
+      test: ["CMD-SHELL", "pg_isready -U cp9 -d cp9"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -28,5 +28,5 @@ services:
           memory: 512M
 
 volumes:
-  copaw_data:
+  cp9_data:
     driver: local
